--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 </code></pre>
 
-<script src="https://d3js.org/d3.v4.0.0-alpha.49.min.js"></script>
+<script src="./d3.v4.0.0-alpha.49.min.js"></script>
 
 <script src="./build/bundle.js"></script>
 <script id="demo">
